--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -554,8 +554,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   }
   .sortable li {
     margin: 0 3px 3px 3px;
-    padding: 10px;
-    padding-left: 10px;
+
     font-size: 18px;
     .next_place {
       padding: 10px;
@@ -572,4 +571,54 @@ h2, h3, h4, h5, h6, strong, .bold-text {
 .image-foot {
   width: 100%;
   height: 150px;
+}
+.day-place-detail{
+  background-color: #fbfaf7;
+  box-shadow: 0 1px 3px rgba(2, 2, 2, 0.35);
+  padding: 16px;
+  position: relative;
+  z-index: 1;
+  text-align: left;
+  height: 85px;
+  .day-place-name{
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 21px;
+    position: relative;
+    top: 5px;
+  }
+  .day-place-detail-middle{
+    padding: 0;
+  }
+  .tag{
+    background: #aaa;
+    color: #fff;
+    line-height: 14px;
+    margin: 10px 3px 4px 0;
+    padding: 1px 4px;
+    font-size: 12px;
+    width: 50px;
+  }
+  .remove-itinerary{
+    margin-top: 10px;
+  }
+  .day-transfer {
+    background: #fff;
+    color: #767676;
+    font-size: 12px;
+    line-height: 28px;
+    padding-left: 42px;
+    position: relative;
+    -webkit-transition: -webkit-transform .3s ease;
+    transition: -webkit-transform .3s ease;
+    transition: transform .3s ease;
+    transition: transform .3s ease, -webkit-transform .3s ease;
+    z-index: 2;
+  }
+  .day-transfer:before {
+    margin-right: 39px;
+  }
+  .icn-driving:before {
+    content: '\e08f';
+  }
 }
