--- a/app/views/schedule_days/_schedule_day.html.erb
+++ b/app/views/schedule_days/_schedule_day.html.erb
@@ -15,12 +15,16 @@
                 <input type="text" class="form-control" id="startPlace_<%= schedule_day.index %>" placeholder="Go From">
               </div>
             </div>
+
+            <!-- Place - Region -->
             <div class="form-group">
               <label for="attraction_<%= schedule_day.index %>" class="col-md-6 control-label">Tourist Attraction: </label>
               <div class="col-md-6">
                 <input type="text" class="form-control" id="attraction_<%= schedule_day.index %>" placeholder="Where you love to visit">
               </div>
             </div>
+
+            <!-- Hour spend -->
             <div class="form-group">
               <label for="spendingTime_<%= schedule_day.index %>" class="col-md-6 control-label">Hours spending: </label>
               <div class="col-md-6">
@@ -33,6 +37,8 @@
                 </select>
               </div>
             </div>
+
+            <!-- Submit button -->
             <div class="form-group">
               <label class="col-md-6 control-label"></label>
               <div class="col-md-6">
