--- a/app/views/trips/_itinerary.html.erb
+++ b/app/views/trips/_itinerary.html.erb
@@ -6,9 +6,11 @@
       <div class="itinerary-details">
         <div class="tabs-left">
           <ul class="nav nav-tabs-vertical" id="day-left-panel">
-            <li></li>
-            <li class="active" id="li-day1"><a href="#day1" data-toggle="tab" class="days-tab font-normal">Day 1</a>
-            </li>
+            <% @trip.schedule_days.each do |day| %>
+                <li class="<%= day.index == 1 && 'active' %>" id="li-day<%= day.index %>">
+                  <a href="#day<%= day.index %>" data-toggle="tab" class="days-tab font-normal"><%= day.title %></a>
+                </li>
+            <% end %>
           </ul>
           <div class="tab-content itinerary-content">
             <%= render @trip.schedule_days %>
