--- a/app/views/schedule_days/create.js.erb
+++ b/app/views/schedule_days/create.js.erb
@@ -1,11 +1,11 @@
-var current_index = $(".days-tab").length;
-var next_index = current_index + 1;
-$("#li-day" + current_index).removeClass('active');
-$("#day" + current_index).removeClass('active');
-var append_vertical = ''
-    + '<li class="active" id="li-day' + next_index + '">'
-    + '<a href="#day' + next_index + '" data-toggle="tab" class="days-tab">Day ' + next_index + '</a>'
-    + '</li>';
-var append_schedule = "<%= j(render @schedule_day ) %>";
-$("#day-left-panel").append(append_vertical);
-$(".itinerary-content").append(append_schedule);
+var day_count = $(".days-tab").length;
+for (var i = 1; i <= day_count; i++) {
+  $("#li-day" + i).removeClass('active');
+  $("#day" + i).removeClass('active');
+}
+
+// add new days
+$("#day-left-panel").append("<%= j(render 'schedule_days/li_schedule_day', day: @schedule_day) %>");
+$(".itinerary-content").append("<%= j(render @schedule_day ) %>");
+$("#li-day" + (day_count + 1)).addClass('active');
+$("#day" + (day_count + 1)).addClass('active');
