--- a/app/views/attractions/_attraction.html.erb
+++ b/app/views/attractions/_attraction.html.erb
@@ -1,4 +1,4 @@
-<li class="day_detail">
+<li class="day_detail" id="day-detail_1">
   <div class="transport-time">
     <div class="day-transfer icn-driving">1.5 km &nbsp;/&nbsp; 2 min</div>
   </div>
@@ -7,13 +7,14 @@
       <%= image_tag(asset_path('hcm_church.jpg'), height: '50', width: '50', style: 'vertical-align: bottom', class: 'img-circle') %>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-6 day-place-detail-middle">
       <p class="day-place-name">Ho Chi Minh</p>
       <h3 class="tag">30mins</h3>
     </div>
 
     <div class="col-md-3 text-right remove-itinerary">
-      <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+      <a href="#" id="remove-itinerary_1" rel="day-detail_1"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
     </div>
   </div>
 </li>
+
