--- a/app/views/trips/_itinerary.html.erb
+++ b/app/views/trips/_itinerary.html.erb
@@ -17,7 +17,7 @@
 
     <%= link_to 'Add Day', trip_schedule_days_path(@trip), method: :post,
                 remote: true, class: 'btn btn-primary btn-lg btn-block btn-add-schedule' %>
-  </div> <!-- /container -->
+  </div>
 </div>
 
 <script>
