--- a/app/views/attractions/_attraction.html.erb
+++ b/app/views/attractions/_attraction.html.erb
@@ -4,12 +4,12 @@
   </div>
   <div class="day-place-detail">
     <div class="col-md-3">
-      <%= image_tag(asset_path('hcm_church.jpg'), height: '50', width: '50', style: 'vertical-align: bottom', class: 'img-circle') %>
+      <%= image_tag(attraction.image_url, height: '50', width: '50', style: 'vertical-align: bottom', class: 'img-circle') %>
     </div>
 
     <div class="col-md-6 day-place-detail-middle">
-      <p class="day-place-name">Ho Chi Minh</p>
-      <h3 class="tag">30mins</h3>
+      <p class="day-place-name"><%= attraction.title %></p>
+      <h3 class="tag"><%= attraction.hour_spend %> hour</h3>
     </div>
 
     <div class="col-md-3 text-right remove-itinerary">
